<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingTop="@dimen/activity_vertical_margin"
   tools:context=".activity.handlecall.HandleCallActivity">

   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:gravity="center_horizontal">

      <ImageView
         android:id="@+id/banner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:adjustViewBounds="true"
         android:src="@drawable/ic_app_banner"/>

      <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:src="@drawable/user_pic"/>

      <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/handle_call_demo_user_call_received"
         android:textSize="@dimen/standard_font_size"/>

      <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:text="@string/handle_call_demo_user_flow_name"
         android:textStyle="bold"
         android:textSize="24sp"/>

   </LinearLayout>



   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_alignParentBottom="true">

      <Button
         android:id="@+id/allow_call_button"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginLeft="@dimen/card_horizontal_margin"
         android:layout_marginRight="@dimen/card_horizontal_margin"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:background="@drawable/bottom_flat_button_purple"
         android:text="@string/handle_call_allow_button"
         android:textSize="16sp" />

      <Button
         android:id="@+id/block_call_button"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginLeft="@dimen/card_horizontal_margin"
         android:layout_marginRight="@dimen/card_horizontal_margin"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:background="@drawable/bottom_flat_button_purple"
         android:text="@string/handle_call_block_button"
         android:textSize="16sp" />

      <Button
         android:id="@+id/answer_call_button"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginLeft="@dimen/card_horizontal_margin"
         android:layout_marginRight="@dimen/card_horizontal_margin"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:background="@drawable/bottom_flat_button_purple"
         android:text="@string/handle_call_answer_button"
         android:textSize="16sp" />

   </LinearLayout>

</RelativeLayout>
