<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:layout_marginLeft="@dimen/card_horizontal_margin"
   android:layout_marginRight="@dimen/card_horizontal_margin"
   android:layout_marginBottom="@dimen/card_vertical_margin"
   tools:context=".activity.setactivitywindow.SetActivityWindowActivity">

   <RelativeLayout
      android:id="@+id/title_box"
      android:layout_width="match_parent"
      android:layout_height="@dimen/block_height"
      android:layout_alignParentTop="true">

      <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:text="@string/set_activity_window_title"
         android:textSize="@dimen/flow_title_text_size"/>

   </RelativeLayout>

   <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/bg_rounded_corner_purple"
      android:layout_below="@id/title_box">

      <LinearLayout
         android:id="@+id/location_header"
         android:layout_width="match_parent"
         android:layout_height="@dimen/set_location_header_height"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin">

         <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:src="@drawable/ic_time_white"/>

         <EditText
            android:id="@+id/start_time_field"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:hint="@string/set_activity_window_from_hint"
            android:inputType="number"
            android:textColorHint="@color/light_gray"
            android:textColor="@android:color/white"/>

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/set_activity_window_separator"/>

         <EditText
            android:id="@+id/end_time_field"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:hint="@string/set_activity_window_to_hint"
            android:inputType="number"
            android:textColorHint="@color/light_gray"
            android:textColor="@android:color/white"/>

      </LinearLayout>


      <RelativeLayout
         android:id="@id/bottom_button"
         android:layout_width="match_parent"
         android:layout_height="@dimen/card_block_height"
         android:layout_alignParentBottom="true"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:layout_marginLeft="1dp"
         android:layout_marginRight="1dp"
         android:layout_marginBottom="1dp"
         android:background="@android:color/white">

         <Button
            android:id="@+id/save_activity_window_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@drawable/bottom_flat_button_purple"
            android:text="@string/set_activity_window_continue_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/standard_font_size" />

      </RelativeLayout>

   </RelativeLayout>

</RelativeLayout>