<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   android:theme="@style/MainTheme"
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical"
   android:background="@android:color/white"
   tools:context=".activity.main.MainActivity">

   <TextView
      android:layout_width="match_parent"
      android:layout_height="@dimen/block_height"
      android:background="@color/mainPurple"
      android:paddingLeft="@dimen/activity_vertical_margin"
      android:paddingRight="@dimen/activity_vertical_margin"
      android:gravity="center_vertical"
      android:text="@string/main_activity_title"
      android:textColor="@android:color/white"
      android:textSize="@dimen/standard_font_size"/>

   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="@dimen/hub_background_height"
      android:orientation="vertical"
      android:paddingTop="20dp"
      android:gravity="center_horizontal"
      android:background="@drawable/hub_background">

      <ImageView
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:scaleType="centerInside"
         android:src="@drawable/user_pic"/>

      <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="@string/main_activity_demo_child_name"
         android:textSize="@dimen/standard_font_size"
         android:textColor="@android:color/white"/>

   </LinearLayout>

   <RelativeLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <TextView
         android:id="@+id/no_flow_msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/card_vertical_margin"
         android:layout_centerHorizontal="true"
         android:textSize="@dimen/standard_font_size"
         android:visibility="gone"
         android:text="@string/main_activity_no_flow_message"/>

      <android.support.v7.widget.RecyclerView
         android:id="@+id/flow_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/bottom_button"/>

      <RelativeLayout
         android:id="@id/bottom_button"
         android:layout_width="match_parent"
         android:layout_height="@dimen/block_height"
         android:layout_alignParentBottom="true">

         <Button
            android:id="@+id/create_flow_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/bottom_flat_button_magenta"
            android:text="@string/main_activity_create_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/standard_font_size" />


      </RelativeLayout>

   </RelativeLayout>

</LinearLayout>