<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:layout_marginLeft="@dimen/card_horizontal_margin"
   android:layout_marginRight="@dimen/card_horizontal_margin"
   android:layout_marginBottom="@dimen/card_vertical_margin"
   tools:context=".activity.setlocation.SetLocationActivity">

   <RelativeLayout
      android:id="@+id/title_box"
      android:layout_width="match_parent"
      android:layout_height="@dimen/block_height"
      android:layout_alignParentTop="true">

      <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:text="@string/set_location_title"
         android:textSize="@dimen/flow_title_text_size"/>

   </RelativeLayout>

   <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="@dimen/cards_shadow_padding"
      android:paddingBottom="@dimen/cards_shadow_padding_bottom"
      android:background="@drawable/bg_rounded_corner_magenta"
      android:layout_below="@id/title_box">

      <LinearLayout
         android:id="@+id/location_header"
         android:layout_width="match_parent"
         android:layout_height="@dimen/set_location_header_height"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin">

         <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:src="@drawable/ic_location_white"/>

         <EditText
            android:id="@+id/address_field"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:hint="@string/set_location_address_hint"
            android:textColorHint="@color/light_gray"
            android:textColor="@android:color/white"/>

         <ImageButton
            android:id="@+id/search_address_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/button_look_for_address"
            android:background="@null"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

      </LinearLayout>


      <RelativeLayout
         android:id="@+id/map_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/bottom_button"
         android:layout_below="@id/location_header">

         <fragment
            android:id="@+id/location_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            class="com.google.android.gms.maps.SupportMapFragment" />

         <View
            android:id="@+id/middle_px"
            android:layout_width="1px"
            android:layout_height="1px"
            android:layout_centerInParent="true"
            android:visibility="invisible"/>

         <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/middle_px"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_map_marker" />

      </RelativeLayout>

      <RelativeLayout
         android:id="@id/bottom_button"
         android:layout_width="match_parent"
         android:layout_height="@dimen/block_height"
         android:layout_alignParentBottom="true">

         <Button
            android:id="@+id/save_location_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/bottom_flat_button_magenta"
            android:text="@string/set_location_continue_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/standard_font_size" />

      </RelativeLayout>

   </RelativeLayout>

</RelativeLayout>
